bug fixed #5 button mobile flex

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -77,6 +77,11 @@
   margin-top: 50px;
 }
 
+#pageintro .pushright {
+  display: flex;
+  text-align: center;
+}
+
 /* Content Area --------------------------------------------------------------------------------------------------------------- */
 
 .container {
